# dashboard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHECKMK.md  CLAUDE.md  Dockerfile  LICENSE  LICENSING.md  README.md  THIRD-PARTY-NOTICES.md  TODO.md  UPCOMING.md  build-and-push.sh  compose-dev.yml  compose.yml  justfile  release.sh  sbom.cdx.json
backend/: Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_retention_policy.py  002_transport_device_type.py  003_api_keys.py  003_instance_ssl_verify.py  004_instance_status_snapshot.py  004_widen_metric_name.py  005_agent_mode.py  005_enrollment_codes.py  006_instance_gui_login.py  006_partial_unique_name.py  007_instance_slug.py  008_drop_metrics_5m.py  009_ipsec_ping_monitors.py  010_ipsec_tunnel_events.py  011_securepoint_ssh.py  012_instance_poll_push_interval.py  013_settings_checkmk.py  014_app_settings.py  015_metrics_value_double.py  016_check_events.py  017_notification_routes.py  018_notification_routes_per_instance.py  019_notification_route_enabled.py  020_logfiles.py  021_instance_ping_maintenance.py  022_connectivity_monitors.py  (+20 more)
backend/app/: config.py  main.py
backend/tests/: test_access_log.py  test_access_store.py  test_agent_hub.py  test_agent_runtime_check.py  test_agent_update.py  test_agent_ws.py  test_anonymize.py  test_apikey.py  test_audit_bridge.py  test_auth_security.py  test_bootstrap_superadmin.py  test_bulk_routes.py  test_certs_overview.py  test_check_event_store.py  test_checkmk_aggregate.py  test_checkmk_blackout.py  test_checkmk_bridge.py  test_checkmk_deploy.py  test_checkmk_exclusions.py  test_checks.py  test_client_ip.py  test_comments_routes.py  test_confidence.py  test_config_backup.py  test_config_backup_routes.py  test_connectivity_monitors.py  test_crypto.py  test_devices.py  test_external_ip.py  test_firewall_rules.py  test_firmware_upgrade_route.py  test_geoip.py  test_group_channel_routing.py  test_group_channels.py  test_group_scoping.py  test_groups.py  test_gui_auth.py  test_gui_caddy.py  test_gui_session.py  test_health.py  (+58 more)
tools/: build_agent.py  pyproject.toml
(+693 files in other folders)
